<resources>
    <string name="app_name">AndroidJuegos</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="acceder">Acceder</string>
    <string name="cancelar">Cancelar</string>
    <string name="cuenta">Tu cuenta</string>
    <string name="error_autenticar">Usuario y/o contraseña incorrecto(s)</string>
    <string name="login_valido">Gabriel</string>
    <string name="clave_valida">1234</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="actividad">Actividad</string>
    <string name="curso">Empezar Curso</string>
    <string-array name="contenido_menu_dos">
        <item>OOOOOO</item>

    </string-array>
    <string name="tab_info">Información</string>
    <string name="tab_video">Vídeo</string>
    <string name="tab_examen">Examen</string>
    <string name="video">Video</string>
    <string name="registro">Registro</string>
    <string name="ayuda">Ayuda</string>
    <string name="ayuda_info">En este apartado te brindamos ayuda \n Recordandote que puedes navegar por \n la aplicacion con tan solo dar clic \n en las pestañas y asi dar con el \n contenido que se te puede mostrar, \n en la parte donde se te muestran los \n subtemas, te mostramos un menu donde \n aparece un video de introduccion al \n curso para que quede mas entendida \n la navegacion por el curso, recuerda \n -Debes de contar con tu cuenta para asi \n poder acceder.\n -Dar clic en los botones o immagenes para\n que te lleven a otra ventana\n -Los menus que se presentan cuenta con \n informacion importante.</string>
    <string name="bienvenida_curso">Bienvenido al curso Android Games</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="introduccion">Introducción</string>
    <string name="tem1">Tema 1</string>
    <string name="tem2">Tema 2</string>
    <string name="tem3">Tema 3</string>
    <string name="tem4">Tema 4</string>
    <string name="temIntro">Temario: Introducción</string>
    <string name="tm1">Temario: Bienvenido a Android Games</string>
    <string name="tm2">Temario: Trucos para móvil</string>
    <string name="tm3">Temario: OpenGL y JNI</string>
    <string name="tm4">Temario: Gráficos con openGL</string>
    <string name="modulo1">Modulo 1</string>
    <string name="modtema1">Estos tutoriales de juegos android le guiará a través de la creación de un juego y muchas teorías e ideas detrás de estas técnicas. Han sido creados como módulos semanales para que cada día que ganar un poco de conocimiento. Al final de la semana va a ser capaz de ponerse a prueba al completar el cuestionario semanal.
Los módulos semanales son también un código de colores que van desde los verdes, que es para los módulos fáciles, de color amarillo que es un poco duro, de color naranja, que es todavía más difícil rojo que requiere algunas cuestiones más técnicas, pero nada que no se puede superar sin un poco de ayuda.
</string>
    <string name="modulo2">Modulo 2</string>
    <string name="mod2tm1">Hay algunos pasos que deben completarse antes de que podamos conseguir a la materia esencial y básico de los juegos de construcción para Android Descarga la versión actual de Android Configurar tu Eclipse Crear un emulador para las pruebas.</string>
    <string name="mod2tm2">Descargar el SDK de Android Starter Package ( R14 ) para las ventanas de http://developer.android.com/sdk/index.html y descomprimirlo en una carpeta de trabajo como eclipse - SDK .</string>
    <string name="mod2tm3">Usted está listo para obtener su IDE en funcionamiento con el kit de desarrollo de Android. Vamonos a través de la instalación del SDK de Android 4 (disponible en http://developer.android.com/sdk/index.html ) sobre Eclipse 3.7 ( Indigo , disponible en http://www.eclipse.org</string>
    <string name="mod2tm4">El primer paso en la creación de nuestra aplicación nativa es crear un dispositivo virtual Android ( AVD ) nos Con la versión 1.5 y posteriores del SDK , Google introdujo el concepto de dispositivos virtuales ( AVDs ) . Un AVD es simplemente un conjunto de atributos de configuración aplicado a una imagen emulador que permite al desarrollador para apuntar una versión específica del SDK . Vamos a echar un vistazo a la barra de herramientas de Android en Eclipse</string>
    <string name="mod2tm5">Con la versión 1.5 y posteriores del SDK , Google introdujo el concepto de dispositivos virtuales ( AVDs ) . Un AVD es simplemente un conjunto de atributos de configuración aplicado a una imagen emulador que permite al desarrollador para apuntar una versión específica del SDK . Vamos a echar un vistazo a la barra de herramientas de Android en Eclipse</string>
    <string name="mod2tm6">En lo personal , creo que esta es la mejor manera de desarrollar juegos y aplicaciones que utilizan OpenGL . UN dispositivo real da muchas ventajas del emulador no , es decir , la velocidad y la API confiabilidad. La única salvedad es que el emulador le da la oportunidad de probar múltiples tamaños de pantalla y versiones del API . Antes de Eclipse puede reconocer el dispositivo , es necesario instalar un controlador USB necesario para las comunicaciones .</string>
    <string name="modulo3">Modulo 3</string>
    <string name="mod3tm1">Para el desarrollador Java puro, escribir aplicaciones que hablan con el código C puede ser desalentador en el
comenzando. Me sentí así la primera vez que trataba de escribir un híbrido de Java / C (con dolorosa
éxito debo añadir). Resulta ser sorprendentemente simple si usted entiende el camino
estos idiomas de interfaz juntos. Mi objetivo en esta sección es mostrar lo fácil que
puede ser una llamada a una función C de Java.</string>
    <string name="mod3tm2">Ahora, vamos a crear el proyecto:
1. En Eclipse, haga clic en el icono del nuevo proyecto de Android en la barra de herramientas principal.
2. En el cuadro de diálogo, introduzca un nombre de proyecto .
3. Introduzca un nombre de aplicación . \n
4. Introduzca un nombre de paquete . \n
5. Introduzca un nombre de actividad . \n
6. Especifique una versión mínima del SDK API. \n
7. Haga clic en Finalizar.
</string>
    <string name="mod3tm3">Arquitectura de la aplicación: \n
Vamos a considerar lo que queremos conseguir con esta aplicación: \n
•	Cuando se ejecuta en el emulador, da el mensaje “Hola”. \n
•	Dentro del proyecto, vamos a crear una carpeta con archivos nativos a
lograr lo siguiente: \n
•	Crear una biblioteca nativa con una subrutina principal que se llama
de la actividad principal de Android utilizando JNI. \n
•	La subrutina biblioteca principal invocará un método Java (usando JNI) \n
•	La biblioteca se carga en tiempo de ejecución en Java.
</string>
    <string name="mod3tm4">Como usted debe saber, cuando se inicia la aplicación, el método onCreate (Bundle
savedInstanceState) será invocado por Android. Este método realiza estos críticos pasos:  \n
•	Se carga la biblioteca nativa utilizando System.loadLibrary (nombre). \n
•	Se ejecuta el subsistema principal de la biblioteca mediante la invocación del método nativo Natives.LibMain (String [] argv) . \n
La principal actividad es la primera pieza de nuestro rompecabezas. Tenga en cuenta que la inclusión de 2-3 hace una llamada a Natives.LibMain. Esto es lo que llamo una interfaz nativa (la segunda pieza). Natives.LibMain se define en la clase Natives.java describe en la siguiente sección.
</string>
    <string name="mod3tm5">La interfaz nativa se define en jni.Natives.java tiene dos métodos importantes que tienen que ver
con la biblioteca C (ver el Listado 2-4):  \n
•	static int nativo LibMain (String [] argv): Esta es la biblioteca nativa
subrutina principal. Se va a llamar dentro de la actividad principal de Android con
una matriz de cadenas como argumentos. Note la palabra clave native, que
le dice al compilador de Java que se ejecuta de forma nativa. \n
privado static void OnMessage (cadena de texto, int level): Este
método está destinado a ser llamado desde la biblioteca C, con un mensaje de cadena
y el valor entero (nivel). Este método simplemente imprimir el mensaje a
la consola.
</string>
    <string name="mod3tm6">Aquí es donde todo el trabajo se lleva a cabo. La aplicación se proporciona en lib.c (ver
Listado 2-5). Este archivo reside en la carpeta JNI dentro del proyecto.</string>
    <string name="mod3tm7">La conversión de una matriz de cadenas de Java a una matriz C char es una herramienta muy útil para enviar argumento a una biblioteca nativa.
•	Obtener el tamaño de la matriz de Java, y para cada elemento de la matriz:  \n
•	Obtener el elemento String de Java. \n
•	Convertir el elemento recuperado en una cadena C (char *). \n
•	Asignar espacio para la matriz mediante malloc C (longitud de cadena + 1).
</string>
    <string name="mod3tm8">Antes de poder ejecutar nuestra aplicación nativa de Android que necesitamos para compilar la biblioteca nativa. Porque, el archivo Android.mk se debe crear en la carpeta JNI del proyecto.  \n
Este archivo describe el nombre del módulo y los archivos de origen de la biblioteca como se muestra en El listado 2-8.  \n
NOTA: La ruta de acceso al directorio de instalación NDK debe incluirse en que la variable Path del sistema de lo contrario cygwin no será capaz de localizar el comando NDK-construcción.

</string>
    <string name="mod3tm9">Zeemote ONU Controlador de la palanca de mando Muy Bluetooth populares en los Teléfonos Nokia. Con La Creciente de La Popularidad de Otros Teléfonos Inteligentes, Creadores del SUS lanzaron Plataformas Otras ONU SDK para Como Android y iPhone.</string>
    <string name="modulo4">Modulo 4</string>
    <string name="mod4tm1">Para hacer un buen uso de la GPU, Google ha incluido el Sistema Integrado de OpenGL (ES) dentro de Android. OpenGL ES proporciona la API de software para hacer de alto rendimiento, juegos acelerados por hardware posible. Esta es una API de Java, que es una buena noticia para Java los desarrolladores que deseen crear juegos en 3D a partir de cero, pero malas noticias para los desarrolladores de C que desean volver a utilizar motores 3D escritos en motores de juego C. 3D son muy complejos y grande, y están escritos en su mayoría en C reescritura de estos motores en Java sería una muy difícil tarea, el consumo de recursos de desarrollo y tiempo significativos.</string>
    <string name="mod4tm2">Veamos cómo se hacen los gráficos de OpenGL en Java. Vamos a empezar por la creación de un proyecto para nuestra aplicación de ejemplo. A continuación, vamos a ver las clases que componen el proyecto: El actividad utiliza para iniciar la aplicación, la vista de la superficie utilizada para representar gráficos, el GL hilo utilizado para realizar operaciones en el fondo dibujo, el procesador utiliza el cubo para dibujar el cubo real, y la clase de cubo que tiene información tal como las dimensiones, color, y etc.</string>
    <string name="menu_main">Menu Principal</string>
    <string name="sal">Salir</string>
    <string name="help">Ayuda</string>
    <string name="nombre_registro">Nombre</string>
    <string name="correo_elec">Correo Electrónico</string>
    <string name="usuario_reg">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="confirm_contrasenia">Confirmar Contraseña</string>
</resources>